odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
spec:
  selector:
    app: odoo
  ports:
    - name: odoo-port
      protocol: TCP
      port: 8069
      targetPort: 8069
